# serializer version: 1
# name: TestCreate.test_create_first
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_create_first[mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': True,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_create_first[pg]
  dict({
    'active': True,
    'administrator': True,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'groups': [],
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestCreate.test_force_reset[False]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_force_reset[False][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_force_reset[False][pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'groups': [],
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestCreate.test_force_reset[True]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_force_reset[True][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': True,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_force_reset[True][pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': True,
    'groups': [],
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestCreate.test_no_force_reset[mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_no_force_reset[obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_no_force_reset[pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'groups': [],
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_administrator[False][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': True,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_administrator[False][obj]
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_administrator[False][pg]
  dict({
    'active': True,
    'administrator': True,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'groups': [],
    'handle': 'leeashley',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_administrator[True][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_administrator[True][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_administrator[True][pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'groups': [],
    'handle': 'leeashley',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_password[db]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'invalidate_sessions': True,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_password[obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_password[pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'groups': [],
    'handle': 'bob',
    'id': 1,
    'invalidate_sessions': True,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_primary_groups[No group][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_primary_groups[No group][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_primary_groups[No group][pg]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[]', primary_group='None')>
# ---
# name: TestUpdate.test_primary_groups[Will be in group][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_primary_groups[Will be in group][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_primary_groups[Will be in group][pg]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: TestUpdate.test_primary_groups[in group][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_primary_groups[in group][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_primary_groups[in group][pg]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: TestUpdate.test_primary_groups[removed from group][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_primary_groups[removed from group][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_primary_groups[removed from group][pg]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='None')>
# ---
# name: TestUpdate.test_set_groups[add_groups][mongo_after]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
      2,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_set_groups[add_groups][mongo_before]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_set_groups[add_groups][obj_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'actors',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_set_groups[add_groups][obj_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_set_groups[add_groups][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>, <SQLGroup(id=2, legacy_id=None, name=actors, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: TestUpdate.test_set_groups[add_groups][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: TestUpdate.test_set_groups[maintain_groups][mongo_after]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_set_groups[maintain_groups][mongo_before]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_set_groups[maintain_groups][obj_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_set_groups[maintain_groups][obj_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_set_groups[maintain_groups][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: TestUpdate.test_set_groups[maintain_groups][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: TestUpdate.test_set_groups[remove_groups][mongo_after]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_set_groups[remove_groups][mongo_before]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      1,
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': 1,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_set_groups[remove_groups][obj_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_set_groups[remove_groups][obj_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': dict({
      'id': 1,
      'legacy_id': None,
      'name': 'gaffers',
    }),
  })
# ---
# name: TestUpdate.test_set_groups[remove_groups][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[]', primary_group='None')>
# ---
# name: TestUpdate.test_set_groups[remove_groups][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', groups='[<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>]', primary_group='<SQLGroup(id=1, legacy_id=None, name=gaffers, permissions={'cancel_job': False, 'create_ref': False, 'modify_hmm': False, 'remove_job': False, 'remove_file': False, 'upload_file': False, 'create_sample': False, 'modify_subtraction': False})>')>
# ---
# name: test_find_or_create_b2c_user[False]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Fred',
    'b2c_family_name': 'Smith',
    'b2c_given_name': 'Fred',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': str,
    'id': 'fb085f7f',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_find_or_create_b2c_user[True]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Bilbo',
    'b2c_family_name': 'Baggins',
    'b2c_given_name': 'Bilbo',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': str,
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_find_users[False-None]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': None,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'diamond21',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[False-missing-handle]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[False-test_user]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[None-None]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': None,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'diamond21',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.FULL: 'full'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'juliewilliams',
        'id': 'fb085f7f',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[None-missing-handle]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[None-test_user]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[True-None]
  dict({
    'found_count': 2,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.FULL: 'full'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'juliewilliams',
        'id': 'fb085f7f',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[True-missing-handle]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[True-test_user]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_set_administrator_role[None][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_set_administrator_role[base][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': <AdministratorRole.BASE: 'base'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_set_administrator_role[full][obj]
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
